# lazy-static.rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  ayu.css  build.rs  dark.css  index.html  lib.rs  light.css  main.js  rustdoc.css  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
compiletest/: Cargo.toml
compiletest/src/: lib.rs
compiletest/tests/: compile_tests.rs
compiletest/tests/compile-fail/: README.md  incorrect_visibility_restriction.rs  static_is_private.rs  static_is_sized.rs  static_never_used.rs
examples/: mutex_map.rs
lazy_static/: all.html  fn.initialize.html  index.html  macro.lazy_static.html  trait.LazyStatic.html
src/: core_lazy.rs  heap_lazy.rs  inline_lazy.rs  lazy.rs  lazy_static.rs  lib.rs  nightly_lazy.rs  stable_core_lazy.rs
src/lazy_static/: core_lazy.rs.html  lib.rs.html
tests/: no_std.rs  stable_no_std.rs  stable_no_std_with_threads.rs  test.rs
tests/compile-fail/: static_is_sized.rs
