[package]
name = "lazy_static"
version = "0.1.14"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT"

description = "A macro for declaring lazily evaluated statics in Rust."
readme = "README.md"
documentation = "http://kimundi.github.io/lazy-static.rs/lazy_static/index.html"

repository = "https://github.com/Kimundi/lazy-static.rs"
keywords = ["macro", "lazy", "static"]

[features]
nightly = []
