[package]
name = "lazy_static"
# NB: When modifying, also modify html_root_url in lib.rs
version = "1.0.2"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT/Apache-2.0"

description = "A macro for declaring lazily evaluated statics in Rust."
readme = "README.md"
documentation = "https://docs.rs/lazy_static"

repository = "https://github.com/rust-lang-nursery/lazy-static.rs"
keywords = ["macro", "lazy", "static"]
categories = [ "no-std", "rust-patterns", "memory-management" ]

[dependencies.spin]
version = "0.4.6"
optional = true

[features]
nightly = []
spin_no_std = ["nightly", "spin"]

[badges]
appveyor = { repository = "rust-lang-nursery/lazy-static.rs" }
travis-ci = { repository = "rust-lang-nursery/lazy-static.rs" }

is-it-maintained-issue-resolution = { repository = "rust-lang-nursery/lazy-static.rs" }
is-it-maintained-open-issues = { repository = "rust-lang-nursery/lazy-static.rs" }

maintenance = { status = "passively-maintained" }
